name:                simplereq
version:             0.1.0.0
author:              Veit Heller
maintainer:          veit@veitheller.de
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     SimpleReq
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       case-insensitive,
                       containers,
                       lens,
                       mtl,
                       wreq,
                       zepto >=0.9 && <0.10
  default-language:    Haskell2010

